syntax = "proto3";

option java_multiple_files = true;
option java_package = "gov.nist.csd.pm.proto.obligation";

package gov.nist.csd.pm.proto.obligation;

message ObligationCreated {
  int64 author = 1;
  string pml = 2;
}

message ObligationDeleted {
  string name = 1;
}